--- a/styles.css
+++ b/styles.css
@@ -37,14 +37,15 @@ body {
   nav ul li a {
     color: #fff;
     text-decoration: none;
-    padding: 10px 20px;
+    padding: 10px 10px;
+    font-size: 25px;
   }
   
   /* Hero Section */
   .hero {
     background-color: #f76c6c;
     color: #fff;
-    padding: 50px;
+    padding: 20px;
     text-align: center;
   }
   
@@ -60,31 +61,33 @@ body {
   /* About section styles */
   .about {
     background-color: #f9f9f9;
-    padding: 30px;
+    padding: 20px;
     color: #333;
+    
   }
   
   .about h2 {
     margin-bottom: 20px;
-    font-size: 80px; /* Increase the font size */
+    font-size: 40px; /* Increase the font size */
   }
   
   .about p {
-    font-size: 25px; /* Increase the font size */
+    font-size: 20px; /* Increase the font size */
     line-height: 1.6;
   }
   
   /* Project section styles */
   .project {
-    padding: 90px;
+    padding: 50px;
     display: flex;
     justify-content: space-around;
     flex-wrap: wrap;
+    font-size: 30px;
   }
   
   .item {
-    margin-bottom: 30px;
-    padding: 50px;
+    margin-bottom: 10px;
+    padding: 20px;
     background-color: #fff;
     border-radius: 5px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -104,13 +107,13 @@ body {
   
   .item h3 {
     color: #333;
-    margin-top: 15px;
-    font-size: 40px; /* Increase the font size */
+    margin-top: 5px;
+    font-size: 25px; /* Increase the font size */
   }
   
   .item p {
     color: #666;
-    font-size: 35px; /* Increase the font size */
+    font-size: 20px; /* Increase the font size */
   }
   
   .item button {
@@ -184,7 +187,8 @@ body {
     background-color: #333;
     color: #fff;
     text-align: center;
-    padding: 20px;
+    padding: 10px;
+    font-size: 20px;
   }
   
   .footer p {
